/*
 * $Id: ChangeLog,v 1.5433 2007/04/13 15:39:40 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2007-04-13 16:17 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * source/vm/hvm.c
    * Reverted silly factorization of HB_QSELF()
  * source/rtl/win32ole.prg
    * Do NOT inherit from HB_Object() to avoid OLE namespace pollution

2007-04-13 11:38 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * include/hbpp.h
    + Added:
       #define HB_PP_CMP_KEY        0x1000
       #define HB_PP_CMP_MATCHRULE  0x2000
  * source/pp/ppcore.c
    * Corrected #[x]untranslate/[x]uncommand to work as documented
  * include/hbclass.ch
    * Corrected usage of #[x]untranslate

2007-04-12 10:10 UTC-0300 Luiz Rafael Culik Guimaraes
  * makefile.bc
    makefile.vc
    makefile.pc
    makefile.wc
    !added missing classesc.c

2007-04-12 08:31 UTC-0300 Luiz Rafael Culik Guimaraes
  * debian/README.debian
  * debian/changelog
  * debian/control
  * debian/copyright
  * debian/dirs
  * debian/files
  * debian/harb.sh
  * debian/rules
  * debian/substvars
  * make_deb.sh
    ! updated  now it generate an usable .deb

2007-04-11 21:11 UTC-0700 Andres Reyes <andresreyes_mzt/at/yahoo.com.mx>
  * source/vm/classes.c
    - Moved Functions __CLS_PARAM, __CLS_PAR00 to classesc.c
  + source/vm/classesc.c
    * This File is Only For Keep functions nedded for old versions
      of the compiler, and this not will be linked in a exe file,
      only if it's necesary.
    + Keep Functions __CLS_PARAM, __CLS_PAR00
  * source/vm/makefile
    * Add classesc.c

2007-04-11 18:39 UTC-0700 Andres Reyes <andresreyes_mzt/at/yahoo.com.mx>
  * include/hbextern.ch
    * Comment EXTERN __CLS_PARAM
  * include/hbclass.ch
    * Optimization for speed
    + Added #xtranslate __CLS_PARAM
    + Added #xtranslata __CLS_PAR00
  * source/vm/classes.c
    * Not Needed