@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.5433 2007/04/13 15:39:40 ronpinkas Exp $
+ * $Id: ChangeLog,v 1.5434 2007/04/13 20:25:58 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,13 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2007-04-13 18:08 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
+  * source/vm/arrays.c
+    + Added argument validation and error reporting for hb_arrayfromParams()
+  * source/vm/arrayshb.c
+    + Added suppport for <nLevel> to HB_APARAMS() - default is 0
+    + Added argument validation and error reporting for HB_APARAMS()
 
 2007-04-13 16:17 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
   * source/vm/hvm.c
